--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+vendor/
+.bundle
+
 # Created by https://www.gitignore.io/api/swift
 
 ### Swift ###
@@ -49,7 +52,7 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
 
 # Carthage
 #
